git ignore images and videos

--- a/bolu.html
+++ b/bolu.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <style>
+        h1 color: verdena;
+        p 
         </style>
         <title>this is a web </title>
     </head>
     <body>
         <h1>a very strong word</h1>
+        <img src="Hydrangeas.jpg" 
     </body>
 </html>
